Add endpoint to fetch single permissions
