# lib/routes/permissions/{id}.js
@@ -1,5 +1,17 @@
 'use strict'
 
+async function get (req, res, next) {
+  try {
+    const permission = await req.services.permissions.findOne(
+      req.params.id,
+      req.auth.access_token
+    )
+    res.json(permission)
+  } catch (e) {
+    next(e)
+  }
+}
+
 async function remove (req, res, next) {
   try {
     const permission = await req.services.permissions.delete(
@@ -13,5 +25,6 @@ async function remove (req, res, next) {
 }
 
 exports = module.exports = {
+  get,
   delete: remove
 }
